feat(docs): add new properties 'name', 'race_id', 'security_status', and 'title' to docTemplate, swagger.json, and swagger.yaml for consistency and completeness refactor(db): rename InitTables function to MigrateSchema and improve schema migration process for better clarity and maintainability refactor(db): update InsertCharacter function in db.go to fetch and update character data from ESI API before insertion into the database feat(models): add new fields 'name', 'security_status', 'title', and 'race_id' to Character struct in kill.go for enhanced character data representation
