# backend/docs/swagger.yaml
@@ -34,6 +34,14 @@ definitions:
     properties:
       id:
         type: integer
+      name:
+        type: string
+      race_id:
+        type: integer
+      security_status:
+        type: number
+      title:
+        type: string
     type: object
   models.ErrorResponse:
     properties:
